BGE: Fix for [#30450] "F-Curve on bone not working" reported by HG1.

Run IPOs for all objects and not just non-armature objects.